    and "CONFIG -set output=default". (Wengier)
  - The command "KEYB US" will return the DOS codepage
    to 437 if current codepage is different. (Wengier)
  - The setting "output=default" will enable the OpenGL
    output for the Linux platform if possible. (Wengier)
  - Fixed DOS Int21/AH=0x5a "Create temporary file"
    function not generating unique files. (Wengier)
  - Fixed launching Windows programs when the working
    directory has no 8.3 filename entry. (Wengier)
  - Fixed an issue in MinGW builds that no data will be
    sent to the OPL3Duo board. (DhrBaksteen)
  - Fixed that the "Save" button in Configuration Tool
    did not save config file in last version. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4336: Correct an oversight of r4186 when floppy
    disks are mounted.
    - r4330: some big endian improvements and drive_fat
    fixes. (jmarsh)
    - r4320: Report Q-Channel track number in BCD,
    meaning it is not converted to binary by the
    CD-ROM device driver. Fixes the CD-Player feature
    of DOS Navigator 1.51 when playing past track 15.
    - r4318: Add LOGC debug command to log cs:ip only.
0.83.10
  - The Windows key(s) in Windows and the Command key(s)
    in macOS will now be displayed as the "Windows" and
    "Command" keys instead of the "super" and the "meta"
    keys in SDL1 builds just like SDL2 builds. (Wengier)
  - Cursor blinking rate for TrueType font (TTF) output
    can now be customized with the ttf.blinkc option.
    Set an integer between 1 (fastest) and 7 (slowest)
    to change TTF cursor blinking rate, or setting it to
    0 for no cursor (or false for non-blinking cursor as
    in previous versions), with the default value being
    6 on PC-98 systems and 4 elsewhere. (Wengier)
  - Fixed parallel port emulation to allow MDA port 3BCh
    to work properly.
  - Enhanced the printer function on Windows platforms
    to allow printer names to be specified in [printer]