@@ -78,6 +78,8 @@
     output for the Linux platform if possible. (Wengier)
   - Fixed DOS Int21/AH=0x5a "Create temporary file"
     function not generating unique files. (Wengier)
+  - Fixed that the current drive goes back to Z drive
+    when combined unmounts & mounts are used. (Wengier)
   - Fixed launching Windows programs when the working
     directory has no 8.3 filename entry. (Wengier)
   - Fixed an issue in MinGW builds that no data will be
